# mallow-cli

./: .gitignore  README.md  install.bat  install.ps1  install.sh  mallow.py  pyproject.toml  requirements.txt
mallow/: api.py  cli.py  commands.py  config.py  models.json
