# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mallow-cli"
version = "0.1.0"
description = "Mallow: Your Friendly Local LLM Server."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "rich",
    "huggingface_hub",
    "Flask",
    "transformers",
    "torch",
    "accelerate",
    "bitsandbytes",
]

[project.scripts]
# This is the magic line!
# It creates a command named 'mallow' that runs the 'main' function
# from the 'mallow/cli.py' file.
mallow = "mallow.cli:main"